[package]
name = "rustproj1"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rustc-serialize = "~0.3"
rand = "0.3.0"
hex-literal = "0.2.1"
aes-soft = "0.3.3"
block-modes = "0.3.3"
hex = "0.3.2"
time = "*"
base64 = "*"
openssl = "*"